--- a/www/style.css
+++ b/www/style.css
@@ -11,6 +11,7 @@ body {
     min-height: 100vh;
     display: flex;
     align-items: center;
+    overflow-x: hidden;
     background: linear-gradient(0deg, rgba(234, 145, 145, 1) 0%, rgba(255, 255, 255, 1) 100%);
 }
 
@@ -30,7 +31,7 @@ body {
 
 button {
     position: relative;
-    width: 20%;
+    width: 24%;
     padding: 0.5em 1.6em;
     font-size: 0.8em;
     color: var(--main-color);
@@ -43,7 +44,11 @@ button {
 }
 
 button:hover {
-    width: 50%;
+    width: 40%;
+}
+
+button:focus {
+    outline: 0;
 }
 
 button::after,
@@ -75,4 +80,49 @@ button::before {
     width: 100%;
     text-align: center;
     margin-top: -25%;
+}
+
+.title-img-container {
+    text-align: center;
+}
+
+.title-img-container img {
+    width: 45%;
+}
+
+@media screen and (max-width:800px) {
+    .title-img-container img {
+        width: 80%;
+    }
+}
+
+#MemberID {
+    display: none;
+}
+
+#Showcase {
+    width: 50%;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+#Showcase > h3 {
+    width: 300px;
+    height: 300px;
+    line-height: 300px;
+    background: white;
+    text-align: center;
+}
+
+#ShowChara {
+    width: 50%;
+    transform: translateY(22px);
+    z-index: 1;
+}
+
+@media screen and (max-width:600px) {
+    #Showcase {
+        transform: translateX(-80%);
+    }
 }
