--- a/www/style.css
+++ b/www/style.css
@@ -97,7 +97,10 @@ button::before {
 }
 
 #MemberID {
-    display: none;
+    /*display: none;*/
+    visibility:hidden;
+    width:0;
+    height:0;
 }
 
 #Showcase {
